wordpress-deployment.yaml
apiVersion: v1beta3
kind: Deployment
metadata:
  name: wordpress-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
      - name: web
        image: plecuyer/wordpress:1.7.9
        ports:
        - containerPort: 80
      - name: db
        image: mysql
