wp-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: wp-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: web
        image: rlabelle/cr460
        ports:
        - containerPort: 80
