wp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wp-service
spec:
  selector:
    app: web
  ports:
    - protocol: TCP
      port: 80
  type: LoadBalancer
  #ype: NodePort
