wp-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wp-ingress
spec:
  rules:
  - http:
      paths:
      - path: /nignx
        backend:
          serviceName: wp-service
          servicePort: 80
      - path: /nignx2
        backend:
          serviceName: wp-service
          servicePort: 80
